--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -32,7 +32,7 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 %
 %\usepackage{graphicx,listings,amsmath,amssymb,amsthm,amsfonts,tikz}
 \usepackage{cite}
-\usepackage{amsmath, amsfonts, amsthm}
+\usepackage{amsmath, amsfonts, amsthm, xfrac}
 \usepackage{stmaryrd} % double brackets
 \usepackage{listingsutf8}
 \usepackage[usenames,dvipsnames]{xcolor}
