--- a/thesis/2-effects_in_theory.tex
+++ b/thesis/2-effects_in_theory.tex
@@ -13,7 +13,7 @@ Następnie przyjrzymy się, jak możemy zapisać popularne przykłady efektów u
 \newcommand{\handle}[2]{\mathbf{handle}\ #1\ \mathbf{with}\ #2}
 \newcommand{\hcase}[3]{#1\ #2\ \Rightarrow\ #3}
 \newcommand{\fun}[2]{\lambda #1.\ #2}
-\newcommand{\eval}[1]{\llbracket\, #1\, \rrbracket}
+%% \newcommand{\eval}[1]{\llbracket\, #1\, \rrbracket}
 \newcommand{\cond}[3]{\mathbf{if}\ #1\ \mathbf{then}\ #2\ \mathbf{else}\ #3}
 
 Będziemy rozważać obliczenia nad wartościami następujących trzech typów:
@@ -49,28 +49,31 @@ Przykładowymi obliczeniami w naszej notacji są więc:
 
 Dla czytelności, pisząc w uchwycie zbiór który nie przebiega wszystkich operacji, przyjmujemy że uchwyt nie definiuje działania operacji; równoważnie, zbiór wzbogacamy o element: \(\hcase{op_i}{n\ \kappa}{op_i(n, \kappa)}\).
 
-Obliczanie wartości wyrażenia przebiega następująco:
+%% Obliczanie wartości wyrażenia przebiega następująco:
+Nie będziemy wprost definiować przebiegu obliczeń, ale definiujemy kilka równoważności, które będą zachodzić:
 \begin{itemize}
-\item \(\eval{\return v} = v\) -- wartością \(\mathbf{return}\) jest wartość wyrażenia arytmetycznego,
-\item \(\eval{(\fun{x}{e})\ y} = \eval{e \left[\sfrac{x}{\eval{y}}\right]}\) -- aplikacja argumentu do funkcji,
+%% \item \(\eval{\return v} = v\) -- wartością \(\mathbf{return}\) jest wartość wyrażenia arytmetycznego,
+\item \((\fun{x}{e_1})\ e_2 \equiv e_1 \left[\sfrac{x}{e_2}\right]\) -- aplikacja argumentu do funkcji,
 \item
   \(\begin{aligned}[t]
-    \eval{\cond{v_1 = v_2}{e_t}{e_f}} = \left\{\begin{matrix}
-    \eval{e_t} & \text{gdy }\eval{v_1} = \eval{v_2} \\ 
-    \eval{e_f} & \text{wpp}
+    \cond{v_1 = v_2}{e_t}{e_f} \equiv \left\{\begin{matrix}
+    e_t & \text{gdy }v_1 \equiv v_2 \\
+    e_f & \text{wpp}
     \end{matrix}\right.
   \end{aligned}\)
-\item \(\eval{\handle{\return v}{H}} = \eval{\return v}\) -- uchwyt nie wpływa na wartość obliczenia, które nie zawiera efektów ubocznych,
-\item \(\eval{\handle{\opi{i}{a}{\fun{x}{e}}}{H}} = \eval{h_i \left[\sfrac{n}{\eval{a}},\, \sfrac{\kappa}{\fun{x}{\handle{e}{H}}}\right]} \), \\gdzie \(H~=~\{\ \hcase{op_i}{n\ \kappa}{h_i} \ \}\).
+\item \(\handle{\return v}{H} \equiv \return v\) -- uchwyt nie wpływa na wartość obliczenia, które nie zawiera efektów ubocznych,
+\item \(\handle{\opi{i}{a}{\fun{x}{e}}}{H} \equiv h_i \left[\sfrac{n}{a},\, \sfrac{\kappa}{\fun{x}{\handle{e}{H}}}\right] \), \\*gdzie \(H~=~\{\ \hcase{op_i}{n\ \kappa}{h_i} \ \}\).
   
 \end{itemize}
 
-Zobaczmy jak zatem wygląda obliczenie ostatniego z powyższych przykładów:
+%% Zobaczmy jak zatem wygląda obliczenie ostatniego z powyższych przykładów:
+%% Zobaczmy zatem jaką wartość zwróci wyrażenie z ostatniego z powyższych przykładów:
+Korzystając z równoważności uprośćmy ostatni z powyższych przykładów:
 \begin{equation}\begin{split}
-  \eval{\handle{\opi{1}{2}{\fun{x}{\return{x + 1}}}}{\{\ \hcase{op_1}{n\ \kappa}{\kappa\ (2 \cdot n)} \ \}}} &= \\
-  \eval{\handle{(\fun{x}{\return{x+1}}) (2 \cdot 2)}{\{\ \hcase{op_1}{n\ \kappa}{\kappa\ (2 \cdot n)} \ \}}} &= \\
-  \eval{\handle{\return{4+1}}{\{\ \hcase{op_1}{n\ \kappa}{\kappa\ (2 \cdot n)} \ \}}} &= \\
-  \eval{\return{4 + 1}} &= 5
+  \handle{\opi{1}{2}{\fun{x}{\return{x + 1}}}}{\{\ \hcase{op_1}{n\ \kappa}{\kappa\ (2 \cdot n)} \ \}} &\equiv \\
+  \handle{(\fun{x}{\return{x+1}}) (2 \cdot 2)}{\{\ \hcase{op_1}{n\ \kappa}{\kappa\ (2 \cdot n)} \ \}} &\equiv \\
+  \handle{\return{4+1}}{\{\ \hcase{op_1}{n\ \kappa}{\kappa\ (2 \cdot n)} \ \}} &\equiv \\
+  \return{5} %&= 5
 \end{split}\end{equation}
 
 
@@ -78,7 +81,7 @@ Zobaczmy jak zatem wygląda obliczenie ostatniego z powyższych przykładów:
 
 Do tego momentu, nie przyjmowaliśmy żadnych założeń na temat operacji powodujących efekty uboczne. Uchwyty mogły w związku z tym działać w sposób całkowicie dowolny. Ograniczymy się w tej dowolności i nałożymy warunki na uchwyty wybranych operacji. Przykładowo, ustalmy że dla operacji \(op_r\), uchwyty muszą być takie aby następujący warunek był spełniony:
 \begin{align}
-  \forall n\ \forall e.\ \eval{\handle{op_r(n, \fun{x}{e})}{H}} = n
+  \forall n\ \forall e.\ \handle{op_r(n, \fun{x}{e})}{H} \equiv n
 \end{align}
 
 Zauważmy, że istnieje tylko jeden naturalny uchwyt spełniający tej warunek, jest nim \(H = \{\ \hcase{op_r}{n\ \kappa}{n} \ \}\). Co więcej, jego działanie łudząco przypomina konstrukcję wyjątków w popularnych językach programowania:
@@ -97,16 +100,16 @@ Podobieństwo to jest w pełni zamierzone. Okazuje się że nasz język z jedną
 Rozważmy kolejny przykład. Dla poprawienia czytelności, zrezygnujemy z oznaczeń \(op_i\) na operacje powodujące efekty, zamiast tego nadamy im znaczące nazwy: \(get\) oraz \(put\). Operacje te mają sygnatury \(get: U \rightarrow (\mathbb{Z} \rightarrow \mathbb{Z}) \rightarrow \mathbb{Z}\), \(put: \mathbb{Z} \rightarrow (U \rightarrow \mathbb{Z}) \rightarrow \mathbb{Z}\). Spróbujemy wyrazić działanie tych dwóch operacji by otrzymać modyfikowalną komórkę pamięci. Ustalamy równania:
 
 \begin{itemize}
-\item \(\forall e.\ \eval{get(u, \fun{\_}{get(u, \fun{x}{e})})} = \eval{get(u, \fun{x}{e})}\)
+\item \(\forall e.\ get(u, \fun{\_}{get(u, \fun{x}{e})}) \equiv get(u, \fun{x}{e})\)
 
   kolejne odczyty z komórki bez jej modyfikowania dają takie same wyniki,
-\item \(\forall e.\ \eval{get(u, \fun{n}{put(n, \fun{u}{e})})} = \eval{e}\)
+\item \(\forall e.\ get(u, \fun{n}{put(n, \fun{u}{e})}) \equiv e\)
 
   umieszczenie w komórce wartości, która już tam się znajduje, nie wpływa na wynik obliczenia,
-\item \(\forall n.\ \forall f.\ \eval{put(n, \fun{u}{get(u, \fun{x}{f\ x})})} = \eval{f\ n}\)
+\item \(\forall n.\ \forall f.\ put(n, \fun{u}{get(u, \fun{x}{f\ x})}) \equiv f\ n\)
 
   obliczenie które odczytuje wartość z komórki daje taki sam wyniki, jak gdyby miało wartość komórki podaną wprost jako argument,
-\item \(\forall n_1.\ \forall n_2.\ \forall e.\ \eval{put(n_1, \fun{u}{put(n_2, \fun{u}{e})})} = \eval{put(n_2, \fun{u}{e})}\)
+\item \(\forall n_1.\ \forall n_2.\ \forall e.\ put(n_1, \fun{u}{put(n_2, \fun{u}{e})}) \equiv put(n_2, \fun{u}{e})\)
 
   komórka zachowuje się, jak gdyby pamiętała jedynie najnowszą włożoną do niej wartość.
 \end{itemize}
